Fix: view and like icon doesn't align well

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -235,6 +235,11 @@ main>.content {
   width: 15%;
 }
 
+.view-icon img,
+.like-icon img {
+  width: 100%;
+}
+
 .view-number,
 .like-number {
   align-self: center;
